--- a/style/style.css
+++ b/style/style.css
@@ -86,17 +86,28 @@ nav a:hover{
     font-size: 22px;
     line-height: 22px;
     font-weight: 600;
-    padding-top: 100px;
+    padding-top: 200px;
+    margin-left: 400px;
 }
 
 .using__img{
     display: flex;
-    gap: 50px;    
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 150px; 
+    width: 700px;
+    padding-top: 50px;
+    text-align: center;
+    margin-inline: auto;   
 }
 
 .using__cards img{
     width: 70px;
     height: 70px;
+    transition: transform 0.1s;
+}
+.using__cards img:hover{
+    transform: scale(1.3);
 }
 .using__cards p{
     font-family: var(--textFond);
@@ -104,4 +115,220 @@ nav a:hover{
     font-size: 14px;
     line-height: 14px;
     font-weight: 400;
+    margin-top: 10px;
+}
+.learning{
+    padding-top: 50px;
+}
+
+.line__block{
+    width: 1000px;
+    height: 50px;
+    background-color: var(--titleColor);
+    margin-block: 200px 5px;
+    border-radius: 20px;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+
+/* create footer */
+
+footer{
+    padding-top: 80px;
+}
+
+.footer__main{
+    display: flex;
+}
+
+.footer__logo{
+    width: 240px;
+    height: 100px;
+}
+
+.footer__info{
+    margin-left: 70px;
+}
+
+.footer__info h1{
+    font-family: var(--titleFond);
+    color: var(--titleColor);
+    font-size: 40px;
+    line-height: 40px;
+    font-weight: 600;
+    margin-block: 40px 5px;
+    margin-left: 20px;
+}
+
+.footer__info p{
+    font-family: var(--textFond);
+    color: var(--textColor);
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 700;
+    margin-left: 20px;
+}
+
+.footer__img{
+    margin-top: 80px;
+}
+.footer__img img{
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    margin-left: 15px;
+}
+
+
+.footer__menu{
+    /* margin-top: 60p */
+    margin-left: 370px;
+    max-width: 800px;
+    /* height: 400px; */
+}
+
+.footer__menu h1{
+    font-family: var(--titleFond);
+    color: var(--titleColor);
+    font-size: 30px;
+    line-height: 30px;
+    font-weight: 700;
+    padding-block: 60px 40px;
+}
+
+.footer__menu span{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.footer__menu a {
+    font-family: var(--textFond);
+    color: var(--textColor);
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 600;
+    /* margin-top: 50px; */
+}
+
+.footer__menu a p:hover{
+    color: var(--titleColor);
+    text-decoration: underline;
+}
+.footer__img a img{
+    transition: transform 0.3s;
+}
+.footer__img a img:hover{
+    transform: scale(1.2);
+    box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.6);
+}
+.footer__contact{
+    margin-top: 60px;
+    margin-left: 150px;
+}
+
+.footer__contact h1{
+    font-family: var(--titleFond);
+    color: var(--titleColor);
+    font-size: 30px;
+    line-height: 30px;
+    font-weight: 700;
+}
+
+.footer__contact button{
+    width: 250px;
+    height: 50px;
+    background-color: var(--titleColor);
+    border-radius: 50px;
+    border: none;
+    margin-top: 30px;
+
+    font-family: var(--textFond);
+    color: var(--menuColor);
+    font-size: 22px;
+    line-height: 30px;
+    font-weight: 600;
+}
+
+.footer__contact button:hover{
+    background-color: transparent;
+    border: 4px solid var(--titleColor);
+    color: var(--titleColor);
+}
+
+.footer__note{
+    background-color: var(--titleColor);
+    font-family: var(--titleFond);
+    color: var(--menuColor);
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 400;
+    margin-block: 50px;
+}
+.footer__note p{
+    padding-block: 30px;
+    margin-left: 50px;
+}
+.footer__note span{
+    font-family: var(--textFond);
+    font-size: 16px;
+}
+
+/* create contact us */
+
+.inputs{
+    background-color: var(--titleColor);
+    padding-block: 70px;
+    /* display: flex; */
+    margin-top: 80px;
+    border-radius: 50px;
+    /* justify-content: center; */
+}
+
+.contact__main{
+    display: flex;
+    align-items: center;
+}
+
+.inputs__menu{
+    display: flex; 
+    flex-direction: column;
+    gap: 30px; 
+    /* width: 450px; */
+}
+
+.inputs__menu input{
+   width: 400px;
+   height: 50px;
+   background-color: transparent;
+   border: 4px solid var(--menuColor);
+   border-top: none;
+   border-right: none;
+   margin-top: 30px;
+   margin-left: 200px;
+   outline: none;
+
+   font-family: var(--textFond);
+   color: var(--textColor);
+   font-size: 15px;
+   line-height: 20px;
+   font-weight: 500;    
+   padding-top: 10px;
+   padding-left: 20px;
+}
+
+.inputs input:nth-child(4){
+    height: 150px;
+    outline: none;
+}
+
+.contact__pick{
+    margin-left: 250px;
+    border: 5px solid var(--menuColor);
+    border-radius: 30px;
+}
+.contact__pick img{
+    width: 320px;
+    height: 550px;
+    border-radius: 30px;
+    margin: 30px;
 }
