--- a/style/style.css
+++ b/style/style.css
@@ -332,3 +332,125 @@ footer{
     border-radius: 30px;
     margin: 30px;
 }
+
+
+
+/* create projeckt */
+
+.projects{
+    margin-top: 100px;
+    background-color: var(--titleColor);
+    padding-block: 50px;
+    border-radius: 20px;
+}
+
+.project__title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    height: 50px;
+    background-color: transparent;
+    border-inline: 4px solid var(--menuColor);
+    margin-inline: auto;
+    margin-top: 50px;    
+
+    font-family: var(--titleFond);
+    color: var(--menuColor);
+    font-size: 25px;
+    font-weight: 500;
+        
+}
+
+
+
+.all__projects img{
+    width: 300px;
+    height: 300px;
+    margin-top: 150px;
+}
+
+
+
+
+
+@media (max-width: 768px) {
+    .header__menu {
+        flex-direction: column;
+        margin-left: 0;
+        gap: 30px;
+        align-items: center;
+    }
+
+    nav {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .using h1 {
+        margin-left: 0;
+        text-align: center;
+        padding-inline: 10px;
+    }
+
+    .using__img {
+        width: 100%;
+        gap: 50px;
+    }
+
+    .line__block {
+        width: 90%;
+    }
+
+    .project1 a{
+        
+    }
+
+    .footer__main {
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .footer__menu {
+        margin-left: 0;
+        text-align: center;
+        padding-inline: 20px;
+    }
+
+    .footer__contact {
+        margin-left: 0;
+        text-align: center;
+    }
+
+    .contact__main {
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+
+    .inputs__menu input {
+        width: 90%;
+        margin-left: 0;
+        margin-inline: auto;
+    }
+
+    .inputs__menu input:nth-child(4){
+        height: 100px;
+    }
+
+    .contact__pick {
+        margin-top: 50px;
+        margin-left: 0;
+
+    }
+
+    .contact__pick img {
+        width: 250px;
+        height: 450px;
+    }
+
+    .container {
+        padding-inline: 10px;
+    }
+}
